# Fuktory

./: CMakeLists.txt  FactoryExecutor.cpp  FactoryExecutor.h  Worker.cpp  Worker.h  configread.cpp  configread.h  dump.cpp  dump.h  facktory.cpp  facktory.h  grep.cpp  grep.h  main.cpp  readfile.cpp  readfile.h  replace.cpp  replace.h  sort.cpp  sort.h  writefile.cpp  writefile.h
